# local-app

./: .clang-format  .gitignore  .pylintrc  .style.yapf  README.md  docker-compose.yml  dockerfile  environment.yml  install.sh  local-app.service  main.py  requirements.txt
.github/workflows/: main.yml
config/: local-app.service  requirements.txt  smb.conf
cpp_server/: .gitignore  CMakeLists.txt  Dockerfile
cpp_server/src/: main.cpp
cpp_server/src/api/: python_server.cpp  python_server.hpp
cpp_server/src/config/: env_variables.cpp  env_variables.hpp  json_config.hpp  json_config_handler.cpp  json_config_handler.hpp
cpp_server/src/features/file_shell/: file_shell.cpp  file_shell.hpp
cpp_server/src/features/log_trimmer/: log_trimmer.cpp  log_trimmer.hpp
cpp_server/src/features/status/: status.cpp  status.hpp  status_template.hpp
cpp_server/src/server/: server.cpp  server.h
cpp_server/src/utils/: log.cpp  log.hpp
cpp_server/src/vault/: constants.hpp  vault.cpp  vault.hpp
cpp_server/src/vault/classes/: File.cpp  File.hpp
cpp_server/src/vault/internal/: path.cpp  path.hpp
python_server/: __main__.py  log.py
python_server/features/: file_sync.py
python_server/features/activity/: __init__.py  _blink_timer.py
python_server/features/routines/: __init__.py
python_server/interfaces/: os.py
python_server/interfaces/api/: __init__.py  config.py  server_app.py
python_server/interfaces/home/: __init__.py  __main__.py  _api.py  _device.py  _preset.py
python_server/interfaces/sensors/: _BME280.py  _TSL2591.py  __init__.py  _dht22.py
python_server/server/: __init__.py  _actions.py  _activity.py  _files.py  _readings.py
src/: __main__.py  cycle.py  log.py  main.py  outward.py  reader.py  routine.py  sensors.py  server.py  tradfri.py
src/actions/: __init__.py
src/cli/: __init__.py
src/features/: sync.py
src/features/activity/: __init__.py  _blink_timer.py  blink_timer.py
src/features/menu/: __init__.py
src/features/routines/: __init__.py  _api.py  _routine.py  routine.py
src/interfaces/: os.py
src/interfaces/actuators/: _mocks.py  led.py  tradfri.py
src/interfaces/api/: __init__.py  config.py  server_app.py  time_tracking.py
src/interfaces/home/: __init__.py  __main__.py  _api.py  _device.py
src/interfaces/peripheral/: __init__.py
src/interfaces/sensors/: __init__.py  _dht22.py
src/peripheral/: __init__.py
src/remote_interfaces/: __init__.py  activity.py  config.py  server_app.py
src/routines/: __init__.py  routine.py
src/sensors/: SGP40.py  TSL2591.py  __init__.py  sgp40.py
src/server/: __init__.py  _actions.py  _activity.py  _files.py  _readings.py  iot.py  readings.py
(+11 files in other folders)
